--- a/css/style.css
+++ b/css/style.css
@@ -81,14 +81,23 @@ body{
     padding: 3px;
     border: none;
     font-size: 1.5vh;
+    
     background-color: rgb(255, 255, 255);
+    cursor: pointer;
+    z-index: 2;
 }
-
+.botao:hover{
+    background-color: rgba(0, 0, 0, 0.3);
+}
+.botao a{
+    text-decoration: none;
+    color: #000000;
+}
 .confirm:hover{
     background-color: green;
 }
 
-.cancel:hover{
+.cancel:hover, .deletar:hover{
     background-color: red;
 }
 
