--- a/css/style.css
+++ b/css/style.css
@@ -22,39 +22,51 @@ body{
     background-color: rgba(255, 255, 255, 0.293);
     
     width: auto;
-    /* height: 30%; */
-    padding: 2vh;
+    height: auto;
+    padding: 30px;
     
     gap: 15px;
     border-radius: 5px;
-    padding: 20px;
-    margin: 10px;
+    /* margin: 40px; */
     border: 2px rgba(255, 255, 255, 0.8) dotted;
     
-    color: rgb(155, 155, 155);
+    color: rgb(0, 0, 0);
     font-size: 2vh;
 
-    background-image: url(../assets/img/storm_overcast_sky_night.jpg);
-    background-size: 50vw;
+    background-image: url(../assets/img/starrybeach-2.jpg);
+    background-size: 250vw;
     background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
+    background-position: right;
+    background-attachment:local;
 }
 .nucleo form{
     display: flex;
-    flex-direction: inherit;
+    flex-direction: column;
     gap: 15px;
+    padding: 10px;
+    background-color: rgba(33, 51, 255, 0.514);
+    border-radius: 5px;
+    width: 70vw;
 }
 .separador{
     display: flex;
     flex-direction: column;
 }
-
+input{
+    background-color: rgba(255, 255, 255, 0.9);
+    color: rgb(0, 13, 159);
+    padding: 3px;
+    border-radius: 5px;
+    font-size: large;
+    outline: none;
+    border: none;
+    box-shadow: rgba(0, 0, 0, 0.51) 2px 2px 2px 2px;
+}
 .titulo{
     display: flex;
     align-items: center;
     justify-content: center;
-
+    font-weight: 800;
     font-size: 4vh;
 }
 
@@ -64,8 +76,8 @@ body{
     border-radius: 5px;
     font-size: 1vh;
     text-decoration: none;
-    color: rgb(0, 0, 0);
-    background-color: rgba(0, 21, 255, 0.276);
+    color: rgb(255, 255, 255);
+    background-color: rgba(33, 51, 255, 0.83);
     padding: 2px;
 }
 
@@ -78,30 +90,33 @@ body{
 }
 
 .botao{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 5px;
     padding: 3px;
     border: none;
-    font-size: 1.5vh;
-    
-    background-color: rgb(255, 255, 255);
+    font-size: 2vh;
+    text-decoration: none;
+    color: #ffffff;
+    background-color: rgba(0, 13, 151, 0.83);
     cursor: pointer;
     z-index: 2;
+    height: auto;
+    width: auto;
 }
 .botao:hover{
-    background-color: rgba(0, 0, 0, 0.3);
-}
-.botao a{
-    text-decoration: none;
+    background-color: rgb(255, 255, 255);
     color: #000000;
 }
 .confirm:hover{
     background-color: green;
+    color: #000000;
 }
-
 .cancel:hover, .deletar:hover{
-    background-color: red;
+    background-color: rgba(255, 0, 0, 0.8);
+    color: #000000;
 }
-
 .actions a {
     margin-right: 5px;
 }
@@ -114,10 +129,9 @@ table{
 
 th, td{
     border: 1px solid #ddd;
-    padding: 8px;
+    padding: 5px;
     text-align: left;
 }
-
 th{
     background-color: rgb(0, 222, 19);;
     color: #000000;
@@ -125,4 +139,27 @@ th{
 
 tr, td{
     background-color: #000000;
+}
+.botoes-tabela{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.botoes-tabela .botao{
+    width: 40%;
+    height: auto;
+    display: flex;
+    padding: 3px;
+    margin: 0;
+}
+.botoes{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: end;
+    margin-top: 20px;
+    gap: 10px;
+    width: 100%;
 }
