--- a/css/style.css
+++ b/css/style.css
@@ -128,9 +128,10 @@ table{
 }
 
 th, td{
-    border: 1px solid #ddd;
+    border: 1px solid #ffffff62;
     padding: 5px;
     text-align: left;
+    
 }
 th{
     background-color: rgb(0, 222, 19);;
@@ -140,6 +141,12 @@ th{
 tr, td{
     background-color: #000000;
 }
+
+.foto_user{
+    max-height: 50px;
+    max-width: 50px;
+}
+
 .botoes-tabela{
     display: flex;
     flex-direction: row;
@@ -162,4 +169,5 @@ tr, td{
     margin-top: 20px;
     gap: 10px;
     width: 100%;
+
 }
